# rpcd

./: .gitignore  CMakeLists.txt  exec.c  exec.h  file.c  file.h  iwinfo.c  iwinfo.h  luci2.c  luci2.h  main.c  plugin.c  plugin.h  rc.c  session.c  session.h  sys.c  system.c  system.h  uci.c  uci.h  ucode.c  wireguard.c
debian/: control  generate-changelog.sh  rpcd-dev.install  rpcd-mod-file.install  rpcd-mod-iwinfo.install  rpcd-mod-rpcsys.install  rpcd.dirs  rpcd.install  rpcd.postinst  rpcd.postrm  rpcd.service  rules  watch
debian/acl/: iwinfo.json  rpcsys.json
examples/ucode/: example-plugin.uc
include/rpcd/: exec.h  plugin.h  session.h  uci.h
